[project]
name = "mdverse-scrapers"
version = "0.1.0"
description = "MDverse scrapers"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Pierre Poulain", email = "pierre.poulain@cupnet.net" },
    { name = "Essmay Touami", email = "essmay.touami@etu.u-paris.fr" },
    { name = "Salahudin Sheikh", email = "sheikh@ibpc.fr"}
]
maintainers = [
    { name = "Pierre Poulain", email = "pierre.poulain@cupnet.net" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "biopython>=1.85",
    "certifi>=2026.1.4",
    "click>=8.3.1",
    "html5lib>=1.1",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "mdanalysis>=2.9.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "parquet-tools>=0.2.16",
    "pooch>=1.8.2",
    "pyarrow>=19.0.1",
    "pycurl>=7.45.7",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "selenium>=4.40.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.1",
    "plotly>=6.0.0",
    "prek>=0.2.29",
    "pysankeybeta>=1.4.2",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
    "upsetplot>=0.9.0",
    "watermark>=2.5.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
scrape-zenodo = "mdverse_scrapers.scrapers.zenodo:main"
scrape-figshare = "mdverse_scrapers.scrapers.figshare:main"
scrape-nomad = "mdverse_scrapers.scrapers.nomad:main"
scrape-atlas = "mdverse_scrapers.scrapers.atlas:main"
scrape-mdposit = "mdverse_scrapers.scrapers.mdposit:main"
